# hl-capture

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  aliases.js  build.rs  rustfmt.toml  search-index.js  settings.html  source-files.js
.travis/: index.html  install-ffmpeg.sh  install-opencl.sh  install-sdl2.sh
cl_src/: color_conversion.cl  sampling.cl
docs/: search-index.js
docs/hl_capture/: RunListenServer.v.html  fn.Memory_Init.html  fn.RunListenServer.html  index.html  sidebar-items.js
hl_capture/: all.html  fn.CL_Disconnect.html  fn.Con_ToggleConsole_f.html  fn.GL_SetMode.html  fn.Host_FilterTime.html  fn.Key_Event.html  fn.Memory_Init.html  fn.RunListenServer.html  fn.S_PaintChannels.html  fn.S_TransferStereo16.html  fn.Sys_VID_FlipScreen.html  fn.VideoMode_IsWindowed.html  index.html  sidebar-items.js
hl_capture/capture/: enum.CaptureThreadEvent.html  enum.GameThreadEvent.html  fn.capture.html  fn.capture_audio.html  fn.capture_thread.html  fn.encode.html  fn.get_audio_buffer.html  fn.get_buffer.html  fn.get_capture_parameters.html  fn.get_event.html  fn.get_event_block.html  fn.initialize.html  fn.is_capturing.html  fn.parse_capture_parameters.html  fn.parse_encoder_parameters.html  fn.parse_exposure.html  fn.parse_fps.html  fn.parse_pixel_format.html  fn.stop.html  fn.stop_encoder.html  fn.test_encoder.html  index.html  sidebar-items.js  static.AUDIO_BUF_RECEIVER.html  static.CAPTURING.html  static.GAME_THREAD_RECEIVER.html  static.SEND_TO_CAPTURE_THREAD.html  static.VIDEO_BUF_RECEIVER.html  static.cap_audio_bitrate.html  static.cap_audio_encoder_settings.html  static.cap_crf.html  static.cap_filename.html  static.cap_fps.html  static.cap_muxer_settings.html  static.cap_pixel_format.html  static.cap_sampling_exposure.html  static.cap_sampling_sps.html  static.cap_sound_extra.html  static.cap_video_bitrate.html  static.cap_video_encoder_settings.html  (+17 more)
hl_capture/command/: constant.COMMANDS.html  index.html  sidebar-items.js  struct.Args.html  trait.Command.html
hl_capture/cvar/: constant.EMPTY_CVAR_T.html  index.html  sidebar-items.js  static.CVARS.html  struct.CVar.html  struct.cvar_t.html  type.Result.html
hl_capture/dl/: fn.open.html  index.html  sidebar-items.js  struct.Handle.html  type.Result.html
hl_capture/encode/: constant.HL_CHANNEL_LAYOUT.html  constant.HL_SAMPLE_FORMAT.html  (+17 more)
src/: avcodec.rs  capture.rs  command.rs  cvar.rs  dl.rs  encode.rs  engine.rs  function.rs  lib.rs  macros.rs  manual_free.rs  profiler.rs  sdl.rs  utils.rs
(+266 files in other folders)
