[package]
name = "hl-capture"
version = "0.1.0"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[dependencies]
error-chain = "0.11"
fine_grained = "0.1"
lazy_static = "1"
libc = "0.2"
gl = "0.7"
glx = "0.2"
ocl = "0.15"

[dependencies.ffmpeg]
git = "https://github.com/meh/rust-ffmpeg.git"
# path = "../rust-ffmpeg"
default-features = false
features = ["codec", "format", "software-resampling", "software-scaling"]

[dependencies.sdl2-sys]
version = "0.31"
features = ["use-pkgconfig"]

[build-dependencies]
syn = { version = "0.11", features = ["full", "visit"] }
walkdir = "1"
