[package]
name = "hl-capture"
version = "0.1.0"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
build = "build.rs"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[dependencies]
failure = "0.1"
fine_grained = "0.1"
lazy_static = "1"
libc = "0.2"
gl = "0.10"
glx = "0.2"
ocl = "0.19"

[dependencies.ffmpeg]
git = "https://github.com/YaLTeR/rust-ffmpeg.git"
rev = "44d959888d3480ea2a1203544370a424a4c40364"
default-features = false
features = ["codec", "format", "software-resampling", "software-scaling"]

[replace."ffmpeg-sys:3.4.1" ]
git = "https://github.com/YaLTeR/rust-ffmpeg-sys.git"
rev = "ae19ee2006eca4c99cb05f54e8156b8f98c96c51"

[dependencies.sdl2-sys]
version = "0.31"
features = ["use-pkgconfig"]

[build-dependencies]
syn = { version = "0.14", features = ["full", "visit"] }
proc-macro2 = "0.4"
walkdir = "2"
